Bugfix: text now readable in header

--- a/personal-testing/full-stack-app/frontend/src/components/header/header.css
+++ b/personal-testing/full-stack-app/frontend/src/components/header/header.css
@@ -30,9 +30,9 @@
   height: 100%;
   background: linear-gradient(
     to right,
-    rgba(130, 201, 30, 0.1),
-    rgba(130, 201, 30, 0.1) 35%,
-    rgba(130, 201, 30, 0) 100%
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.4) 30%,
+    rgba(0, 0, 30, 0) 100%
   );
   position: absolute;
   z-index: -5;
